// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`directionが設定出来る mode:normal direction: column 1`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`directionが設定出来る mode:normal direction: row 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -4,11 +4,11 @@
      \\"scanSpeed\\": 0,
    },
    \\"cursol\\": Object {
      \\"activeColumn\\": 0,
      \\"activeRow\\": 0,
-     \\"direction\\": \\"column\\",
+     \\"direction\\": \\"row\\",
      \\"mode\\": \\"normal\\",
    },
    \\"developerMode\\": Object {
      \\"isActive\\": true,
    },"
`;

exports[`directionが設定出来る mode:proposal direction: column 1`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`directionが設定出来る mode:proposal direction: row 1`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`increment mode:normal direction: column 0に戻る 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -2,11 +2,11 @@
    \\"configWindow\\": Object {
      \\"isActive\\": false,
      \\"scanSpeed\\": 0,
    },
    \\"cursol\\": Object {
-     \\"activeColumn\\": 9,
+     \\"activeColumn\\": 0,
      \\"activeRow\\": 0,
      \\"direction\\": \\"column\\",
      \\"mode\\": \\"normal\\",
    },
    \\"developerMode\\": Object {"
`;

exports[`increment mode:normal direction: column 1増える 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -2,11 +2,11 @@
    \\"configWindow\\": Object {
      \\"isActive\\": false,
      \\"scanSpeed\\": 0,
    },
    \\"cursol\\": Object {
-     \\"activeColumn\\": 0,
+     \\"activeColumn\\": 1,
      \\"activeRow\\": 0,
      \\"direction\\": \\"column\\",
      \\"mode\\": \\"normal\\",
    },
    \\"developerMode\\": Object {"
`;

exports[`increment mode:normal direction: row 0に戻る 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -3,11 +3,11 @@
      \\"isActive\\": false,
      \\"scanSpeed\\": 0,
    },
    \\"cursol\\": Object {
      \\"activeColumn\\": 0,
-     \\"activeRow\\": 4,
+     \\"activeRow\\": 0,
      \\"direction\\": \\"row\\",
      \\"mode\\": \\"normal\\",
    },
    \\"developerMode\\": Object {
      \\"isActive\\": true,"
`;

exports[`increment mode:normal direction: row 1増える 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -3,11 +3,11 @@
      \\"isActive\\": false,
      \\"scanSpeed\\": 0,
    },
    \\"cursol\\": Object {
      \\"activeColumn\\": 0,
-     \\"activeRow\\": 0,
+     \\"activeRow\\": 1,
      \\"direction\\": \\"row\\",
      \\"mode\\": \\"normal\\",
    },
    \\"developerMode\\": Object {
      \\"isActive\\": true,"
`;

exports[`increment mode:proposal direction: column 0に戻る 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -2,11 +2,11 @@
    \\"configWindow\\": Object {
      \\"isActive\\": false,
      \\"scanSpeed\\": 0,
    },
    \\"cursol\\": Object {
-     \\"activeColumn\\": 9,
+     \\"activeColumn\\": 0,
      \\"activeRow\\": 0,
      \\"direction\\": \\"column\\",
      \\"mode\\": \\"proposal\\",
    },
    \\"developerMode\\": Object {"
`;

exports[`increment mode:proposal direction: column 1増える 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -2,11 +2,11 @@
    \\"configWindow\\": Object {
      \\"isActive\\": false,
      \\"scanSpeed\\": 0,
    },
    \\"cursol\\": Object {
-     \\"activeColumn\\": 0,
+     \\"activeColumn\\": 1,
      \\"activeRow\\": 0,
      \\"direction\\": \\"column\\",
      \\"mode\\": \\"proposal\\",
    },
    \\"developerMode\\": Object {"
`;

exports[`modeが設定出来る normalの場合 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -5,11 +5,11 @@
    },
    \\"cursol\\": Object {
      \\"activeColumn\\": 0,
      \\"activeRow\\": 0,
      \\"direction\\": \\"column\\",
-     \\"mode\\": \\"proposal\\",
+     \\"mode\\": \\"normal\\",
    },
    \\"developerMode\\": Object {
      \\"isActive\\": true,
    },
    \\"estimator\\": Object {"
`;

exports[`modeが設定出来る proposalの場合 1`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;
